# enclaver

./: .dockerignore  CODE_OF_CONDUCT.md  Dockerfile.example  Dockerfile.example.app  Makefile  README.md  go.mod  go.sum
.github/actions/cargo-zig/: Dockerfile  action.yaml  entrypoint.sh
.github/actions/cargo-zigbuild/: Dockerfile  action.yaml  entrypoint.sh
.github/edgebit/: source-syft.yaml
.github/workflows/: build-containers.yaml  build-enclaver-wrapper-base.yaml  build-nitro-cli.yaml  build-wrapper-base.yaml  ci.yaml  release.yaml  sbom.yaml  upload-sbom.yaml
buildenv/: Dockerfile
builder/: build.sh  builder.go  docker.go  move_artifacts.sh  pins.go  prepare_builder.sh
builder/dockerfiles/: build-release.dockerfile  nitro-cli.dockerfile  odyn-release.dockerfile  runtimebase.dockerfile
cmd/enclaver/: main.go
cmd/enclaver-example/: main.go
cmd/enclaver-proxy/: main.go
cmd/enclaver-wrapper/: main.go
cmd/netfwd/: main.go
crypto/cms/: README.md  ber.go  cms.go  cms_test.go  oids.go
docs/: architecture.md  commands.md  deploy-aws.md  deploy-kubernetes.md  deploy-local.md  faq.md  getting-started.md  guide-app.md  guide-first.md  guide-kms.md  guide-vault.md  install.md  manifest.md  troubleshooting.md
docs/assets/: enclaver-eks-nodegroup-x86.yaml  enclaver.cloudformation-arm.yaml  enclaver.cloudformation-x86.yaml  enclaver.cloudformation.yaml  example-enclave.yaml  smarter-device-manager-ds-with-cm.yaml
enclaver/: Cargo.toml
enclaver/src/: api.rs  build.rs  constants.rs  error.rs  http_client.rs  http_util.rs  images.rs  keypair.rs  lib.rs  manifest.rs  nitro_cli.rs  nsm.rs  policy.rs  run.rs  run_container.rs  test.crt  test.key  tls.rs  utils.rs  vsock.rs
enclaver/src/policy/: domain_filter.rs  ip_filter.rs  mod.rs
enclaver/src/proxy/: aws_util.rs  egress_http.rs  ingress.rs  kms.rs  mod.rs  pkcs7.rs
example/: Dockerfile  app.js  build.sh  enclaver.yaml  go.mod  go.sum  package.json  policy.yaml
example/cmd/enclave-example/: main.go
host/cmd/enclaverd/: main.go
kms/: deserializers.go
netfwd/: go.mod  go.sum
netfwd/cmd/netfwd/: main.go
nitrocli/: cli.go  types.go
odyn/: Cargo.toml  README.md
odyn/.cargo/: config.toml
odyn/src/: console.rs  enclave.rs  launcher.rs  main.rs  nsm.rs  tls.rs
odyn/src/vsock/: ingress.rs  mod.rs
perf-tests/: Dockerfile  README.md  Test Plan.jmx  enclaver_2vcpu.yaml  enclaver_4vcpu.yaml  go.sum  plan.jmx  run_enclave.sh  run_in_enclave.sh  run_jmeter.sh  run_jmeter_test.sh  server.crt  server.go  server.key
policy/: policy.go
providers/aws/kms/: api_op_GenerateRandom.go  go.mod
providers/aws/kms/types/: types.go
proxy/: enclave_forwarder.go  http_proxy.go  parent_forwarder.go  util.go
proxy/ifconfig/: ifconfig_darwin.go  ifconfig_linux.go
proxy/vsock/: vsock_darwin.go  vsock_linux.go
runtime/: attestation.go  private_key.go  runtime.go
