[package]
name = "enclaver"
version = "0.4.1"
edition = "2021"
rust-version = "1.68"
default-run = "enclaver"

[[bin]]
name = "odyn"
required-features = ["odyn"]

[[bin]]
required-features = ["run_enclave"]
name = "enclaver-run"

[[bin]]
name = "enclaver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
lazy_static = "1.4"
regex = "1.6"
tokio = { version = "1.24.1", features = ["full"] }
tokio-pipe = "0.2"
tokio-vsock = { version = "0.4", optional = true }
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tar = "0.3"
rustls = "0.20"
rustls-pemfile = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
nix = "0.24"
futures = "0.3"
rand = { version = "0.8", features = ["std", "std_rng"] }
futures-util = "0.3"
clap = { version = "4.0, <4.4", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
json = "0.12"
base64 = "0.13"
bollard = "0.13"
tempfile = "3.0"
http = "0.2"
http-body = "0.4"
form_urlencoded = "1.1"
hyper = { version = "0.14", features = ["http1"] }
hyper-proxy = { git = "https://github.com/edgebitio/hyper-proxy.git", default-features = false, features = ["rustls-webpki"] }
uuid = { version = "1.0", features = ["v4"] }
rtnetlink = { version = "0.11", optional = true }
circbuf = "0.2"
async-trait = "0.1"
bytes = "1.0"
ipnetwork = "0.20"
aws-nitro-enclaves-nsm-api = "0.2.1"
aws-types = "0.56.1"
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-smithy-http = "0.56.1"
aws-smithy-client = { version = "0.56.1", features = ["rustls"] }
aws-sigv4 = "0.56.1"
rsa = "0.7"
pkcs8 = { version = "0.9", features = ["pem"] }
zeroize = "1.5.7"
asn1-rs = "0.5.2"
cbc = { version = "0.1", features = [ "std", "block-padding" ] }
aes = "0.8"
sha2 = "0.10"
ignore-result = "0.2.0"
console-subscriber = { version = "0.1.10", optional = true }

[dev-dependencies]
assert2 = "0.3"
tls-listener = { version = "0.5", features = ["rustls", "hyper-h1"] }
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls-webpki-roots"] }
aws-credential-types = { version = "0.56.1", features = ["hardcoded-credentials"] }

[features]
run_enclave = ["proxy"]
odyn = ["vsock", "proxy"]
proxy = ["vsock"]
vsock = ["dep:tokio-vsock", "dep:rtnetlink"]
tracing = ["dep:console-subscriber", "tokio/tracing"]
