[package]
name = "odyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
tokio = { version = "1.20", features = ["full"] }
tokio-pipe = "0.2"
clap = { version = "3.1", features = ["derive"] }
aws-nitro-enclaves-nsm-api = "0.2.1"
log = "0.4"
pretty_env_logger = "0.4"
rtnetlink = "0.11"
circbuf = "0.2"
nix = "0.24"
signal-hook = "0.3"

assert2 = "0.3"
rand = { version = "0.8", features = ["std", "std_rng"] }
